<resources>
    <string name="app_name">너도 올래?</string>
    <string name="login">로그인</string>
    <string name="home">홈</string>
    <string name="around">내 주변</string>
    <string name="friend">친구</string>
    <string name="notification">알림</string>
    <string name="my_page">마이페이지</string>
    <string name="insert_address">주소 입력</string>
    <string name="address_message">지번, 도로명, 건물명을\n입력해주세요.</string>
    <string name="address_hint">예) 올래동 11–1 또는 갈래 아파트</string>
    <string name="detail_address_hint">상세 주소를 입력해주세요.</string>
    <string name="room_info_message">내 방에 놀러올 친구들을 위해\n방 정보를 입력해주세요.</string>
    <string name="hint_room_name">예) 펜타하우스</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="friend_list">친구 목록</string>
    <string name="friend_request">친구 신청</string>
    <string name="previous">이전</string>
    <string name="room_name">방 이름</string>
    <string name="address">주소</string>
    <string name="nickname">닉네임</string>
    <string name="room_rating">방 평가</string>
    <string name="full_Address">%s %s</string>
    <string name="settings">설정</string>
    <string name="notification_settings">알림 설정</string>
    <string name="terms_of_use">이용 약관</string>
    <string name="manage_account">계정 관리</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">탈퇴하기</string>
    <string name="support_developer">개발자 후원</string>
    <string name="developer_info">개발자 정보</string>
    <string name="show_only_available_rooms">예약 가능한 방만 보기</string>
    <string name="host_Rate">주인 평가</string>
    <string name="room_score">방 점수</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- Home Strings -->
    <string name="home_add_room">방 추가하기</string>
    <string name="home_enroll_room">방을 등록해보세요</string>

    <!-- Add Room Strings -->
    <string name="add_room">방 추가</string>
    <string name="upload_picture">방 사진 등록</string>
    <string name="insert_room_info">방 정보 입력</string>
    <string name="insert_room_info_description">방의 기본 정보를 입력해주세요.</string>
    <string name="room_registration_complete">방 등록 완료</string>
    <string name="room_registration_complete_message">축하합니다!\n방 등록이 완료되었습니다.</string>
    <string name="upload_picture_title">친구들이 내 방을\n쉽게 알아볼 수 있는 방 사진을 찍어주세요.</string>
    <string name="what_is_room_name">방 이름은 무엇인가요?</string>
    <string name="how_many_max_guest">방에 최대 몇 명이 올 수 있나요?</string>
    <string name="min_is_one">1명 미만은 선택할 수 없습니다.</string>
    <string name="what_is_room_info">내 방에 놀러오는 친구들이 지켜야 할 수칙이나\n방에 대한 소개글을 적어주세요.</string>
    <string name="hint_room_info">예) 개인 수건 가져와주세요.</string>
    <string name="open_description">내 친구들이 이 방을 언제든지\n예약할 수 있습니다.</string>
    <string name="restrict_description">내 친구들이 예약할 수 있는\n날짜를 선택해주세요.</string>
    <string name="close_description">내 친구들이 이 방을 예약할 수 없습니다.</string>
    <string name="select_date">날짜 선택</string>
    <string name="toast_no_address">주소를 선택해주세요.</string>
    <string name="toast_no_detail_address">상세 주소를 입력해주세요.</string>
    <string name="toast_no_room_name">방 이름을 입력해주세요.</string>
    <string name="toast_no_room_description">방 소개를 적어주세요.</string>


    <!-- Around Strings -->
    <string name="possible_reserve">예약 가능한 방만 보기</string>

    <!-- Friend Strings -->
    <string name="friend_profile">친구 프로필</string>
    <string name="my_profile">내 프로필</string>
    <string name="friend_room_list">방 목록</string>
    <string name="has_no_room">방이 없습니다.</string>
    <string name="only_has_room">자취러만 보기</string>
    <string name="has_room">방 있음</string>
    <string name="does_not_have_room">방 없음</string>

    <!-- Notice Strings -->
    <string name="message_to_guest">수락/거절 메시지</string>
    <string name="delete_guide">완료된 알림 삭제하기</string>
    <string name="accept">수락하기</string>
    <string name="decline">거절하기</string>

    <!-- Review Strings -->
    <string name="my_reservation">나의 예약</string>
    <string name="waiting">대기 중</string>
    <string name="sample_date">20YY.MM.DD</string>
    <string name="sample_time">오후 HH:MM</string>
    <string name="room">방</string>
    <string name="guest">방문자</string>
    <string name="watch_reviews">리뷰 보기</string>
    <string name="content">내용</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="skip">건너뛰기</string>
    <string name="write_guest_review">손님 리뷰 작성</string>
    <string name="write_visit_review">방문 리뷰 작성</string>
    <string name="visit_time">방문 시간</string>
    <string name="select_guest_score">손님 점수를 선택해주세요.</string>
    <string name="please_write_guest_review">손님 리뷰를 작성해주세요.</string>
    <string name="select_room_score">방 점수를 선택해주세요.</string>
    <string name="please_write_room_review">방 리뷰를 작성해주세요.</string>
    <string name="select_host_score">주인 점수를 선택해주세요.</string>
    <string name="please_write_host_review">주인 리뷰를 작성해주세요.</string>
    <string name="sentiment5">최고예요</string>
    <string name="sentiment4">좋아요</string>
    <string name="sentiment3">보통이에요</string>
    <string name="sentiment2">별로예요</string>
    <string name="sentiment1">최악이에요</string>

    <!-- Room profile Strings -->
    <string name="room_of_friend">친구의 방</string>
    <string name="room_of_mine">내 방</string>
    <string name="make_invitation">초대하기</string>
    <string name="make_reservation">예약하기</string>
    <string name="room_state">방 운영 상태</string>
    <string name="opened">개방</string>
    <string name="closed">폐쇄</string>
    <string name="restricted">제한</string>

    <string name="max_guest">최대 방문 인원</string>
    <string name="word_from_host">방 주인의 한 마디</string>
    <string name="room_picture">방 사진</string>
    <string name="room_schedule">방 일정보기</string>
    <string name="view_on_map">지도에서 보기</string>

    <!-- My Page strings -->
    <string name="my_name">내 이름</string>
    <string name="guest_score">손님 점수</string>
    <string name="host_score">주인 점수</string>
    <string name="my_code">나의 친구 코드</string>
    <string name="my_code_cell">나의 친구 코드 : %1$s</string>
    <string name="copy_to_clipboard">클립보드에 복사되었습니다.</string>
    <string name="history">기록</string>
    <string name="manage_review">리뷰 관리</string>
    <string name="visit_history">방문 기록</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="change_picture">사진 변경하기</string>
    <string name="bring_picture">사진 불러오기</string>
    <string name="change_name">이름 변경하기</string>
    <string name="change">수정하기</string>
    <string name="writable_review">작성 가능한 리뷰</string>
    <string name="written_review">작성한 리뷰</string>
    <string name="my_visit_history">나의 방문 기록</string>
    <string name="room_visit_history">내 방의 방문 기록</string>
    <string name="host_name">방 주인 이름</string>

    <!-- Notification Setting Strings -->
    <string name="notification_method">알림 방식</string>
    <string name="notification_reservation_request">친구의 예약 신청</string>
    <string name="notification_reservation_result">예약 신청 수락 여부</string>
    <string name="notification_before_promise">약속 시간 전 알림</string>
    <string name="notification_friend_request">친구 신청</string>
    <string name="notification_become_friend">친구 성사</string>
    <string name="notification_review_request">리뷰 작성 요청</string>
    <string name="notification_review_mine">자신에게 작성된 리뷰</string>

    <!-- Developer Info -->
    <string name="team_name">Team Penta Trespassers</string>
    <string name="team_description">Neodoallae Team</string>
    <string name="first_member">김성준</string>
    <string name="second_member">윤건우</string>
    <string name="third_member">이서진</string>
    <string name="fourth_member">황진하</string>
    <string name="fifth_member">현수빈</string>

    <!-- Developer Github -->
    <string name="team_url">https://github.com/penta-trespassers</string>
    <string name="first_url">https://github.com/sjwhole</string>
    <string name="second_url">https://github.com/inticoy</string>
    <string name="third_url">https://github.com/SEOJIN-LEE</string>
    <string name="fourth_url">https://github.com/recsater</string>
    <string name="fifth_url">https://github.com/sunny5875</string>

    <!-- Developer Role -->
    <string name="front_end">Front-end Developer</string>
    <string name="back_end">Back-end Developer</string>
    <string name="front_back_end">Front/Back-end Developer</string>
    <string name="designer">Designer</string>
    <string name="front_end_designer">Designer/Front-end Developer</string>

    <!-- My Page Past -->
    <string name="my_book_info">나의 예약 정보</string>
    <string name="my_room_book_info">내 방 예약 정보</string>
    <string name="my_visit_trace">나의 방문 기록</string>
    <string name="my_room_visit_trace">내 방 방문 기록</string>
    <string name="booked_date">예약 날짜: </string>
    <string name="visit_date">방문 날짜: </string>


    <string name="See_only_available_rooms">예약 가능한 방만 보기</string>
    <string name="Host_Rate">주인 평가</string>
    <string name="my_room_reservation_information">내 방 예약 정보</string>
    <string name="my_reservation_information">나의 예약 정보</string>
    <string name="my_history">나의 방문기록</string>
    <string name="guest_rate">손님 평가</string>
    <string name="my_room_history">내 방 방문기록</string>


    <!-- Notice strings -->
    <string name="friend_name">친구 이름</string>
    <string name="reserve_info">예약 정보</string>
    <string name="reserve_date">예약 날짜</string>
    <string name="reserve_room">예약한 방</string>
    <string name="visiting_people_number">방문 인원</string>
    <string name="check_in_time">방문 시간</string>
    <string name="check_out_time">퇴실 시간</string>
    <string name="message_to_host">주인장에게 한 마디</string>
    <string name="message_to_host_example">뿌링클 한 마리만 시켜주세요</string>
    <string name="reservation_waiting">%s님의 예약 신청이 있습니다.</string>
    <string name="reservation_accepted">%s님이 예약 신청을 수락했습니다.</string>
    <string name="reservation_declined">%s님이 예약 신청을 거절했습니다.</string>
    <string name="review_host">%s님의 주인 리뷰를 작성해주세요.</string>
    <string name="review_guest">%s님의 손님 리뷰를 작성해주세요.</string>
    <string name="review_room">%s님의 방 리뷰를 작성해주세요.</string>
    <string name="whole_notification">전체 알림</string>
    <string name="friend_accepted">친구 수락</string>
    <string name="friend_room_state_changed">친구 방 상태 변경</string>
    <string name="my_room_reservation">내 방 예약</string>
    <string name="friend_room_reservation">친구 방 예약</string>
    <string name="choose_a_room_management_option">방 운영 옵션을 선택하세요.</string>
    <string name="room_operation_settings">방 운영 설정</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="insert_my_information">내 정보 입력</string>
    <string name="register_message">프로필 사진과 닉네임을 등록해주세요.</string>
    <string name="friend_code_colon">친구 코드:&#160;</string>
    <string name="abcdef">ABCDEF</string>
    <string name="reservation_history">예약 내역</string>
    <string name="title">타이틀</string>
    <string name="insert_friend_code">친구 코드를 입력해주세요.</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="friend_confirm">친구 확인</string>
    <string name="invalid_friend_code">유효하지 않은 친구 코드입니다.</string>
    <string name="info_friend_code">친구 코드 8자리를 입력해주세요.</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="see_all">전체보기</string>
    <string name="my_schedule">내 일정</string>
    <string name="favorite_room">즐겨찾는 방</string>
    <string name="my_room">내 방</string>
    <string name="addFavorite">즐겨찾기 추가</string>
    <string name="removeFavorite">즐겨찾기 삭제</string>
    <string name="already_friend">이미 친구이거나 친구 신청중입니다.</string>


</resources>