<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/aroundItem"
        android:icon="@drawable/location_on_black_24dp"
        android:title="@string/around" />
    <item
        android:id="@+id/friendItem"
        android:icon="@drawable/people_black_24dp"
        android:title="@string/friend" />
    <item
        android:id="@+id/noticeItem"
        android:icon="@drawable/notifications_black_24dp"
        android:title="@string/notice" />
    <item
        android:id="@+id/myPageItem"
        android:icon="@drawable/manage_accounts_black_24dp"
        android:title="@string/my_page" />

</menu>