<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="18dp"
    tools:ignore="SpUsage">

    <ImageView
        android:id="@+id/friendImageReservation"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/trespassGray_600" />

    <ImageView
        android:id="@+id/statusImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_check_circle_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/friendImageReservation"
        app:layout_constraintEnd_toStartOf="@id/arrowImageReservation"
        app:layout_constraintTop_toTopOf="@id/friendImageReservation" />

    <ImageView
        android:id="@+id/arrowImageReservation"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
        app:layout_constraintBottom_toBottomOf="@+id/statusImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/statusImage" />

    <TextView
        android:id="@+id/reservationMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/reserve_info"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/friendImageReservation"
        app:layout_constraintTop_toTopOf="@+id/friendImageReservation" />

    <TextView
        android:id="@+id/reservationDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve_date"
        android:textColor="@color/trespassGray_600"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/friendImageReservation"
        app:layout_constraintStart_toStartOf="@+id/reservationMessageText" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reservationDetailConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendImageReservation"
        tools:visibility="visible">

        <TextView
            android:id="@+id/messageToHostTextReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/message_to_host_example"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messageToHostGuideReservation" />

        <TextView
            android:id="@+id/visitingRoomGuideReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="방문하는 방"
            android:textColor="@color/trespassGray_900"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/messageToGuestGuideReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/message_to_guest"
            android:textColor="@color/trespassGray_900"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messageToHostTextReservation" />

        <TextView
            android:id="@+id/checkInTimeTextReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_time"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkInTimeGuideReservation" />

        <TextView
            android:id="@+id/roomNameTextReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/visitingRoomGuideReservation" />

        <TextView
            android:id="@+id/visitingPeopleTextReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visiting_people_number"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/visitingPeopleGuideReservation" />

        <TextView
            android:id="@+id/messageToHostGuideReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/message_to_host"
            android:textColor="@color/trespassGray_900"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkOutTimeGuideReservation" />

        <TextView
            android:id="@+id/visitingPeopleGuideReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/visiting_people_number"
            android:textColor="@color/trespassGray_900"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visitingRoomGuideReservation" />

        <TextView
            android:id="@+id/checkOutTimeTextReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out_time"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkOutTimeGuideReservation" />

        <TextView
            android:id="@+id/checkInTimeGuideReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/check_in_time"
            android:textColor="@color/trespassGray_900"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visitingPeopleGuideReservation" />

        <TextView
            android:id="@+id/messageToGuestTextReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/message_to_guest"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/messageToGuestGuideReservation" />

        <TextView
            android:id="@+id/checkOutTimeGuideReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/check_out_time"
            android:textColor="@color/trespassGray_900"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkInTimeGuideReservation" />

        <EditText
            android:id="@+id/messageToGuestEditTextReservation"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_border"
            android:gravity="top"
            android:hint="@string/message_to_guest"
            android:padding="18dp"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/messageToHostTextReservation"
            app:layout_constraintTop_toBottomOf="@id/messageToGuestGuideReservation" />

        <Button
            android:id="@+id/declineButtonReservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            app:layout_constraintBottom_toBottomOf="@+id/acceptButtonReservation"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/acceptButtonReservation"
            app:layout_constraintTop_toTopOf="@+id/acceptButtonReservation" />

        <Button
            android:id="@+id/acceptButtonReservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="18dp"
            android:text="@string/accept"
            app:layout_constraintEnd_toStartOf="@id/declineButtonReservation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messageToGuestEditTextReservation" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/reserveUndecidedGroupReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="messageToGuestEditTextReservation
           , acceptButtonReservation
           , declineButtonReservation"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="18dp"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/reserveDecidedGroupReservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="messageToGuestTextReservation
           ,messageToGuestGuideReservation"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="18dp"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>